@@ -1,45 +1,45 @@
 plugins {
+	id 'com.github.johnrengelman.shadow' version '7.1.2'
 	id 'fabric-loom' version '0.11-SNAPSHOT'
 	id 'maven-publish'
 }
-
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
+configurations {
+	shade
+}
+
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	minecraft "com.mojang:minecraft:$minecraft_version"
+	mappings "net.fabricmc:yarn:$yarn_mappings:v2"
+	modImplementation "net.fabricmc:fabric-loader:$loader_version"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:$fabric_version"
+
+	shade compileOnly( project(':lang-api') )
 }
+loom.runConfigs.client.vmArgs( '--enable-native-access=ALL-UNNAMED', '--add-modules', 'jdk.incubator.foreign' )
+loom.runConfigs.server.vmArgs( '--enable-native-access=ALL-UNNAMED', '--add-modules', 'jdk.incubator.foreign' )
 
 processResources {
-	inputs.property "version", project.version
+	inputs.property 'version', project.version
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+	filesMatching('fabric.mod.json') {
+		expand 'version': project.version
 	}
 }
 
 tasks.withType(JavaCompile).configureEach {
 	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-	it.options.release = 17
 	it.options.encoding = 'UTF-8'
+	it.options.release.set(17)
 	it.options.compilerArgs = [
 		'--add-modules', 'jdk.incubator.foreign'
 	] 
@@ -47,13 +47,18 @@ tasks.withType(JavaCompile).configureEach {
 
 java {
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
+	// if it is present. If you remove this line, sources will not be generated.
 	withSourcesJar()
 }
 
+shadowJar {
+	configurations = [ project.configurations.shade ]
+	from sourceSets.main.allSource
+	classifier ''
+}
+
 jar {
-	from("LICENSE") {
+	from('LICENSE') {
 		rename { "${it}_${project.archivesBaseName}"}
 	}
 }
@@ -61,6 +66,7 @@ jar {
 // configure the maven publication
 publishing {
 	publications {
+		//noinspection GroovyAssignabilityCheck
 		mavenJava(MavenPublication) {
 			from components.java
 		}
@@ -69,8 +75,5 @@ publishing {
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
 		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
 	}
 }
